--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,6 @@ build/
 [Bb]in/
 [Oo]bj/
 
-# Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
-!packages/*/build/
-
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
@@ -94,10 +91,11 @@ publish/
 
 # Publish Web Output
 *.Publish.xml
+*.pubxml
 
 # NuGet Packages Directory
 ## TODO: If you have NuGet Package Restore enabled, uncomment the next line
-#packages/
+packages/
 
 # Windows Azure Build Output
 csx
@@ -132,12 +130,6 @@ UpgradeLog*.htm
 App_Data/*.mdf
 App_Data/*.ldf
 
-
-#LightSwitch generated files
-GeneratedArtifacts/
-_Pvt_Extensions/
-ModelManifest.xml
-
 # =========================
 # Windows detritus
 # =========================
@@ -152,5 +144,20 @@ Desktop.ini
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
-# Mac desktop service store files
+# Mac crap
 .DS_Store
+
+
+# =========================
+# Other custom Solution items to ignore
+# =========================
+
+*/License.config
+**/294712_License.config
+
+
+
+*.orig
+**/App_Data/XmlDocument.xml
+Logs/*
+!**/PowershellModules/tools/*
