--- a/src/Distracey.Logary/Distracey.Logary.csproj
+++ b/src/Distracey.Logary/Distracey.Logary.csproj
@@ -30,16 +30,66 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FSharp.Actor">
+      <HintPath>..\..\packages\FSharp.Actor-logary.1.5.0\lib\net40\FSharp.Actor.dll</HintPath>
+    </Reference>
+    <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\FSharp.Core.3.0.0.2\lib\net40\FSharp.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Intelliplan.JsonNet">
+      <HintPath>..\..\packages\Intelliplan.JsonNet.1.5.0\lib\net40\Intelliplan.JsonNet.dll</HintPath>
+    </Reference>
+    <Reference Include="Intelliplan.JsonNet.NodaTime">
+      <HintPath>..\..\packages\Intelliplan.JsonNet.NodaTime.1.5.0\lib\net40\Intelliplan.JsonNet.NodaTime.dll</HintPath>
+    </Reference>
+    <Reference Include="Intelliplan.Logary">
+      <HintPath>..\..\packages\Intelliplan.Logary.1.5.0\lib\net40\Intelliplan.Logary.dll</HintPath>
+    </Reference>
+    <Reference Include="Intelliplan.Logary.Zipkin">
+      <HintPath>..\..\packages\Intelliplan.Logary.Zipkin.1.5.0\lib\net40\Intelliplan.Logary.Zipkin.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="NodaTime">
+      <HintPath>..\..\packages\NodaTime.1.2.0\lib\net35-Client\NodaTime.dll</HintPath>
+    </Reference>
+    <Reference Include="policy.2.3.FSharp.Core">
+      <HintPath>..\..\packages\FSharp.Core.3.0.0.2\lib\net40\policy.2.3.FSharp.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="RestSharp">
+      <HintPath>..\..\packages\RestSharp.104.4.0\lib\net4\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.2\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Core.5.2.2\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LogaryApmApiFilterAttribute.cs" />
+    <Compile Include="LogaryApmConfigurationExtensions.cs" />
+    <Compile Include="LogaryApmExceptionLogger.cs" />
+    <Compile Include="LogaryApmHttpClientDelegatingHandler.cs" />
+    <Compile Include="LogaryApmHttpClientDelegatingHandlerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Distracey\Distracey.csproj">
+      <Project>{4c3a50a8-f0e2-4849-b0b7-78afe3894963}</Project>
+      <Name>Distracey</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
