--- a/src/Distracey.PerformanceCounter/Distracey.PerformanceCounter.csproj
+++ b/src/Distracey.PerformanceCounter/Distracey.PerformanceCounter.csproj
@@ -30,16 +30,49 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.2\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Core.5.2.2\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiFilterCounter\ApiFilterCounterAverageTimeHandler.cs" />
+    <Compile Include="ApiFilterCounter\ApiFilterCounterLastOperationExecutionTimeHandler.cs" />
+    <Compile Include="ApiFilterCounter\ApiFilterCounterNumberOfOperationsPerSecondHandler.cs" />
+    <Compile Include="ApiFilterCounter\ApiFilterCounterTotalCountHandler.cs" />
+    <Compile Include="ApiFilterCounter\IApiFilterCounter.cs" />
+    <Compile Include="HttpClientCounter\HttpClientCounterAverageTimeHandler.cs" />
+    <Compile Include="HttpClientCounter\HttpClientCounterLastOperationExecutionTimeHandler.cs" />
+    <Compile Include="HttpClientCounter\HttpClientCounterNumberOfOperationsPerSecondHandler.cs" />
+    <Compile Include="HttpClientCounter\HttpClientCounterTotalCountHandler.cs" />
+    <Compile Include="HttpClientCounter\IHttpClientCounter.cs" />
+    <Compile Include="PerformanceCounterApmApiFilterAttribute.cs" />
+    <Compile Include="PerformanceCounterApmConfigurationExtensions.cs" />
+    <Compile Include="PerformanceCounterApmContext.cs" />
+    <Compile Include="PerformanceCounterApmHttpClientDelegatingHandler.cs" />
+    <Compile Include="PerformanceCounterApmHttpClientDelegatingHandlerFactory.cs" />
+    <Compile Include="PerformanceCounterApmRuntime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Distracey\Distracey.csproj">
+      <Project>{4c3a50a8-f0e2-4849-b0b7-78afe3894963}</Project>
+      <Name>Distracey</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
