--- a/src/Distracey/Distracey.csproj
+++ b/src/Distracey/Distracey.csproj
@@ -30,16 +30,59 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.Data.Entity.Design" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.2\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Http, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Core.5.2.2\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApmAttribute.cs" />
+    <Compile Include="ApmContext.cs" />
+    <Compile Include="ApmContextExtensions.cs" />
+    <Compile Include="ApmExtensions.cs" />
+    <Compile Include="ApmHttpClientDelegatingHandlerBase.cs" />
+    <Compile Include="ApmHttpClientFinishInformation.cs" />
+    <Compile Include="ApmHttpClientStartInformation.cs" />
+    <Compile Include="ApmWebApiFilterAttributeBase.cs" />
+    <Compile Include="ApmWebApiFinishInformation.cs" />
+    <Compile Include="ApmWebApiStartInformation.cs" />
+    <Compile Include="Constants.cs" />
+    <Compile Include="IApmContext.cs" />
+    <Compile Include="IApmHttpClientDelegatingHandlerFactory.cs" />
+    <Compile Include="Null\NullApmHttpClientDelegatingHandler.cs" />
+    <Compile Include="Null\NullApmHttpClientDelegatingHandlerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Helpers\Reflection\BackingFieldResolver.cs" />
+    <Compile Include="Helpers\Reflection\ByteBuffer.cs" />
+    <Compile Include="Helpers\Reflection\Disassembler.cs" />
+    <Compile Include="Helpers\Reflection\ILPattern.cs" />
+    <Compile Include="Helpers\Reflection\Image.cs" />
+    <Compile Include="Helpers\Reflection\Instruction.cs" />
+    <Compile Include="Helpers\Reflection\MethodBodyReader.cs" />
+    <Compile Include="Helpers\ShortGuid.cs" />
+    <Compile Include="Helpers\TaskHelpers.cs" />
+    <Compile Include="Helpers\TaskHelpersExtensions.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="PerformanceClient.csproj" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
