--- a/src/Distracey.Examples.Website/Distracey.Examples.Website.csproj
+++ b/src/Distracey.Examples.Website/Distracey.Examples.Website.csproj
@@ -108,6 +108,8 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Clients\ServiceDepthOneClient.cs" />
+    <Compile Include="Controllers\DepthZeroController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -140,6 +142,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Distracey\Distracey.csproj">
+      <Project>{4c3a50a8-f0e2-4849-b0b7-78afe3894963}</Project>
+      <Name>Distracey</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
