Add configuration for urls of the services

--- a/src/Distracey.Examples.ServiceDepthTwo/Web.config
+++ b/src/Distracey.Examples.ServiceDepthTwo/Web.config
@@ -17,6 +17,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ServiceDepthThreeBaseUrl" value="http://localhost:50683"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
