--- a/src/Distracey.Examples.ServiceDepthOne/Web.config
+++ b/src/Distracey.Examples.ServiceDepthOne/Web.config
@@ -17,6 +17,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ServiceDepthTwoBaseUrl" value="http://localhost:50682"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
