--- a/src/Distracey.Examples.Website/Web.config
+++ b/src/Distracey.Examples.Website/Web.config
@@ -17,6 +17,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ServiceDepthOneBaseUrl" value="http://localhost:50681"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
