--- a/src/Distracey.Log4Net/Distracey.Log4Net.csproj
+++ b/src/Distracey.Log4Net/Distracey.Log4Net.csproj
@@ -63,6 +63,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Log4NetApmApiFilterAttribute.cs" />
     <Compile Include="Log4NetApmConfigurationExtensions.cs" />
     <Compile Include="Log4NetApmExceptionLogger.cs" />
