--- a/src/Distracey.PerformanceCounter/Distracey.PerformanceCounter.csproj
+++ b/src/Distracey.PerformanceCounter/Distracey.PerformanceCounter.csproj
@@ -59,6 +59,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="ApiFilterCounter\ApiFilterCounterAverageTimeHandler.cs" />
     <Compile Include="ApiFilterCounter\ApiFilterCounterLastOperationExecutionTimeHandler.cs" />
     <Compile Include="ApiFilterCounter\ApiFilterCounterNumberOfOperationsPerSecondHandler.cs" />
