--- a/Distracey.Logary.nuspec
+++ b/Distracey.Logary.nuspec
@@ -17,6 +17,10 @@
     <summary>Add Logary APM metrics for Web Api controllers.</summary>
     <language>en-GB</language>
     <tags>webapi apm logary</tags>
+    <dependencies>
+      <dependency id="Distracey" version="1.0.0.0" />
+      <dependency id="Intelliplan.Logary.Zipkin" version="1.5.0" />
+    </dependencies>     
   </metadata>
   <files>
     <file src="bin\4.5\Distracey.Logary.dll" target="lib/net45" />
