--- a/src/Distracey.Examples.ServiceDepthThree/Web.config
+++ b/src/Distracey.Examples.ServiceDepthThree/Web.config
@@ -17,6 +17,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="log4net.Config" value="log4net.config" />
+    <add key="log4net.Config.Watch" value="True" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
