--- a/src/Distracey.Examples.Website/Web.config
+++ b/src/Distracey.Examples.Website/Web.config
@@ -18,6 +18,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="ServiceDepthOneBaseUrl" value="http://localhost:50681"/>
+    <add key="log4net.Config" value="log4net.config" />
+    <add key="log4net.Config.Watch" value="True" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
