--- a/src/Distracey/Distracey.csproj
+++ b/src/Distracey/Distracey.csproj
@@ -74,6 +74,8 @@
     <Compile Include="ApmHttpClientDelegatingHandlerBase.cs" />
     <Compile Include="ApmHttpClientFinishInformation.cs" />
     <Compile Include="ApmHttpClientStartInformation.cs" />
+    <Compile Include="ApmIncomingRequestDecorator.cs" />
+    <Compile Include="ApmIncomingRequestParser.cs" />
     <Compile Include="ApmWebApiFilterAttributeBase.cs" />
     <Compile Include="ApmWebApiFinishInformation.cs" />
     <Compile Include="ApmWebApiStartInformation.cs" />
