Log to visual studio output window Add zipkin phases SS, SR, CS, CR

--- a/src/Distracey.Examples.ServiceDepthOne/log4net.config
+++ b/src/Distracey.Examples.ServiceDepthOne/log4net.config
@@ -12,6 +12,12 @@
     </layout>
   </appender>
 
+  <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="[ServiceDepthOne] (LOGGER) %-5level %date [%thread] %-22.22c{1} - %m%n"/>
+    </layout>
+  </appender>
+
   <!--<appender name="GelfUdpHostNameAppender" type="Gelf4net.Appender.GelfUdpAppender, Gelf4net">
     <remoteHostName value="nl-ams-logsearch"/>
     <remotePort value="12201" />
@@ -28,6 +34,7 @@
   <root>
     <level value="INFO" />
     <appender-ref ref="RollingFileAppender" />
+    <appender-ref ref="TraceAppender" />
     <!--<appender-ref ref="GelfUdpHostNameAppender" />-->
   </root>
 
