--- a/src/Distracey.Examples.ServiceDepthThree/log4net.config
+++ b/src/Distracey.Examples.ServiceDepthThree/log4net.config
@@ -14,7 +14,7 @@
 
   <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="[ServiceDepthThree] (LOGGER) %-5level %date [%thread] %-22.22c{1} - %m%n"/>
+      <conversionPattern value="[ServiceDepthThree] (LOGGER) %-5level %date [%thread] %-22.22c{1}  - %m%n      X-B3-TraceId=%property{X-B3-TraceId}%n      X-B3-SpanId=%property{X-B3-SpanId}%n      X-B3-ParentSpanId=%property{X-B3-ParentSpanId}%n      X-B3-Sampled=%property{X-B3-Sampled}%n      X-B3-Flags=%property{X-B3-Flags}%n"/>
     </layout>
   </appender>
 
