--- a/src/Distracey.Logary/Distracey.Logary.csproj
+++ b/src/Distracey.Logary/Distracey.Logary.csproj
@@ -42,48 +42,50 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FSharp.Actor">
-      <HintPath>..\..\packages\FSharp.Actor-logary.1.5.0\lib\net40\FSharp.Actor.dll</HintPath>
+    <Reference Include="FSharp.Actor, Version=0.0.1.0, Culture=neutral, PublicKeyToken=9adf1a27c1f9599c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\FSharp.Actor-logary.2.6.0\lib\net40\FSharp.Actor.dll</HintPath>
     </Reference>
-    <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\FSharp.Core.3.0.0.2\lib\net40\FSharp.Core.dll</HintPath>
+    <Reference Include="FSharp.Core, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\..\packages\FSharp.Core.3.1.2.1\lib\net40\FSharp.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Intelliplan.JsonNet">
-      <HintPath>..\..\packages\Intelliplan.JsonNet.1.5.0\lib\net40\Intelliplan.JsonNet.dll</HintPath>
+    <Reference Include="Logary">
+      <HintPath>..\..\packages\Logary.2.6.0\lib\net40\Logary.dll</HintPath>
     </Reference>
-    <Reference Include="Intelliplan.JsonNet.NodaTime">
-      <HintPath>..\..\packages\Intelliplan.JsonNet.NodaTime.1.5.0\lib\net40\Intelliplan.JsonNet.NodaTime.dll</HintPath>
-    </Reference>
-    <Reference Include="Intelliplan.Logary">
-      <HintPath>..\..\packages\Intelliplan.Logary.1.5.0\lib\net40\Intelliplan.Logary.dll</HintPath>
-    </Reference>
-    <Reference Include="Intelliplan.Logary.Zipkin">
-      <HintPath>..\..\packages\Intelliplan.Logary.Zipkin.1.5.0\lib\net40\Intelliplan.Logary.Zipkin.dll</HintPath>
+    <Reference Include="Logary.Zipkin">
+      <HintPath>..\..\packages\Logary.Zipkin.2.6.0\lib\net40\Logary.Zipkin.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="NodaTime">
-      <HintPath>..\..\packages\NodaTime.1.2.0\lib\net35-Client\NodaTime.dll</HintPath>
+    <Reference Include="Newtonsoft.Json.FSharp">
+      <HintPath>..\..\packages\Newtonsoft.Json.FSharp.3.0.0\lib\net40\Newtonsoft.Json.FSharp.dll</HintPath>
     </Reference>
-    <Reference Include="policy.2.3.FSharp.Core">
-      <HintPath>..\..\packages\FSharp.Core.3.0.0.2\lib\net40\policy.2.3.FSharp.Core.dll</HintPath>
+    <Reference Include="NodaTime, Version=1.3.0.0, Culture=neutral, PublicKeyToken=4226afe0d9b296d1, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\NodaTime.1.3.0\lib\net35-Client\NodaTime.dll</HintPath>
     </Reference>
-    <Reference Include="RestSharp">
-      <HintPath>..\..\packages\RestSharp.104.4.0\lib\net4\RestSharp.dll</HintPath>
+    <Reference Include="NodaTime.Serialization.JsonNet">
+      <HintPath>..\..\packages\NodaTime.Serialization.JsonNet.1.3.0\lib\net35-Client\NodaTime.Serialization.JsonNet.dll</HintPath>
+    </Reference>
+    <Reference Include="RestSharp, Version=105.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\RestSharp.105.0.1\lib\net4\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.Formatting, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.2\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.Http, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Core.5.2.2\lib\net45\System.Web.Http.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\GlobalAssemblyInfo.cs">
