--- a/src/Distracey.Logary/packages.config
+++ b/src/Distracey.Logary/packages.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FSharp.Actor-logary" version="1.5.0" targetFramework="net45" />
-  <package id="FSharp.Core.3" version="0.0.2" targetFramework="net45" />
-  <package id="Intelliplan.JsonNet" version="1.5.0" targetFramework="net45" />
-  <package id="Intelliplan.JsonNet.NodaTime" version="1.5.0" targetFramework="net45" />
-  <package id="Intelliplan.Logary" version="1.5.0" targetFramework="net45" />
-  <package id="Intelliplan.Logary.Zipkin" version="1.5.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
-  <package id="NodaTime" version="1.2.0" targetFramework="net45" />
-  <package id="RestSharp" version="104.4.0" targetFramework="net45" />
+  <package id="FSharp.Actor-logary" version="2.6.0" targetFramework="net45" />
+  <package id="FSharp.Core" version="3.1.2.1" targetFramework="net45" />
+  <package id="Logary" version="2.6.0" targetFramework="net45" />
+  <package id="Logary.Zipkin" version="2.6.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="Newtonsoft.Json.FSharp" version="3.0.0" targetFramework="net45" />
+  <package id="NodaTime" version="1.3.0" targetFramework="net45" />
+  <package id="NodaTime.Serialization.JsonNet" version="1.3.0" targetFramework="net45" />
+  <package id="RestSharp" version="105.0.1" targetFramework="net45" />
 </packages>
