Up version number Provide a Package profile for sample websites

--- a/src/Distracey.Examples.ServiceDepthOne/Distracey.Examples.ServiceDepthOne.csproj
+++ b/src/Distracey.Examples.ServiceDepthOne/Distracey.Examples.ServiceDepthOne.csproj
@@ -163,6 +163,9 @@
   <ItemGroup>
     <Content Include="log4net.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\PublishProfiles\Package.pubxml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
