--- a/src/Distracey.Examples.Website/packages.config
+++ b/src/Distracey.Examples.Website/packages.config
@@ -10,4 +10,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="Swashbuckle" version="5.0.1" targetFramework="net45" />
+  <package id="Swashbuckle.Core" version="5.0.1" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.6" targetFramework="net45" />
 </packages>
