--- a/src/Distracey.Examples.Website/Distracey.Examples.Website.csproj
+++ b/src/Distracey.Examples.Website/Distracey.Examples.Website.csproj
@@ -122,7 +122,7 @@
     <Compile Include="Clients\ServiceDepthOneClient.cs" />
     <Compile Include="Controllers\DepthZeroController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\SmoketestController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -155,6 +155,10 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Distracey.Monitoring\Distracey.Monitoring.csproj">
+      <Project>{a4471aea-2368-41ea-8373-63dfd37aac9a}</Project>
+      <Name>Distracey.Monitoring</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Distracey.Log4Net\Distracey.Log4Net.csproj">
       <Project>{f9923139-b970-4104-a58a-0b9af7d0c4f2}</Project>
       <Name>Distracey.Log4Net</Name>
