Move logic that populates ApmContext into base class. Pass ApmContext into event handlers Added most of the required infrastructure for a method invoker tracer

--- a/src/Distracey.Log4Net/Distracey.Log4Net.csproj
+++ b/src/Distracey.Log4Net/Distracey.Log4Net.csproj
@@ -70,7 +70,9 @@
     <Compile Include="Log4NetApmConfigurationExtensions.cs" />
     <Compile Include="Log4NetApmExceptionLogger.cs" />
     <Compile Include="Log4NetApmHttpClientDelegatingHandler.cs" />
+    <Compile Include="Log4NetApmMethodHandlerFactory.cs" />
     <Compile Include="Log4NetApmHttpClientDelegatingHandlerFactory.cs" />
+    <Compile Include="Log4NetApmMethodHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
