MethodHandler refactored to pass in ApmContext via constructor Consolidate common functions for request parser

--- a/src/Distracey.Tests/Distracey.Tests.csproj
+++ b/src/Distracey.Tests/Distracey.Tests.csproj
@@ -55,7 +55,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApmContextTests.cs" />
-    <Compile Include="ApmHttpClientDelegatingHandlerBaseTests.cs" />
+    <Compile Include="ApmRequestParserTests.cs" />
+    <Compile Include="ApmMethodHandlerBaseTests.cs" />
     <Compile Include="ApmWebApiFilterAttributeBaseTracingTests.cs" />
     <Compile Include="ContextUtil.cs" />
     <Compile Include="Mocks\TestApmMethodHandler.cs" />
