--- a/src/Distracey.PerformanceCounter/Distracey.PerformanceCounter.csproj
+++ b/src/Distracey.PerformanceCounter/Distracey.PerformanceCounter.csproj
@@ -42,8 +42,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -79,7 +79,6 @@
     <Compile Include="MethodCounter\IMethodCounter.cs" />
     <Compile Include="PerformanceCounterApmApiFilterAttribute.cs" />
     <Compile Include="PerformanceCounterApmConfigurationExtensions.cs" />
-    <Compile Include="PerformanceCounterApmContext.cs" />
     <Compile Include="PerformanceCounterApmMethodHandlerFactory.cs" />
     <Compile Include="PerformanceCounterApmMethodHandler.cs" />
     <Compile Include="PerformanceCounterApmHttpClientDelegatingHandler.cs" />
