--- a/src/Distracey.Examples.ServiceDepthThree/Distracey.Examples.ServiceDepthThree.csproj
+++ b/src/Distracey.Examples.ServiceDepthThree/Distracey.Examples.ServiceDepthThree.csproj
@@ -157,6 +157,10 @@
       <Project>{a4471aea-2368-41ea-8373-63dfd37aac9a}</Project>
       <Name>Distracey.Monitoring</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Distracey.NoOperation\Distracey.NoOperation.csproj">
+      <Project>{ff6d66ef-1ba8-4a8e-a37c-f7b3a874d3aa}</Project>
+      <Name>Distracey.NoOperation</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Distracey.Log4Net\Distracey.Log4Net.csproj">
       <Project>{f9923139-b970-4104-a58a-0b9af7d0c4f2}</Project>
       <Name>Distracey.Log4Net</Name>
