Move into monitoring and nooperation into src directory

--- a/src/Distracey.Examples.ServiceDepthOne/Distracey.Examples.ServiceDepthOne.csproj
+++ b/src/Distracey.Examples.ServiceDepthOne/Distracey.Examples.ServiceDepthOne.csproj
@@ -153,17 +153,17 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Distracey.Monitoring\Distracey.Monitoring.csproj">
-      <Project>{a4471aea-2368-41ea-8373-63dfd37aac9a}</Project>
-      <Name>Distracey.Monitoring</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Distracey.NoOperation\Distracey.NoOperation.csproj">
-      <Project>{ff6d66ef-1ba8-4a8e-a37c-f7b3a874d3aa}</Project>
-      <Name>Distracey.NoOperation</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Distracey.Log4Net\Distracey.Log4Net.csproj">
       <Project>{f9923139-b970-4104-a58a-0b9af7d0c4f2}</Project>
       <Name>Distracey.Log4Net</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Distracey.Monitoring\Distracey.Monitoring.csproj">
+      <Project>{a4471aea-2368-41ea-8373-63dfd37aac9a}</Project>
+      <Name>Distracey.Monitoring</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Distracey.NoOperation\Distracey.NoOperation.csproj">
+      <Project>{ff6d66ef-1ba8-4a8e-a37c-f7b3a874d3aa}</Project>
+      <Name>Distracey.NoOperation</Name>
     </ProjectReference>
     <ProjectReference Include="..\Distracey.PerformanceCounter\Distracey.PerformanceCounter.csproj">
       <Project>{e0c5c855-4b11-4132-a9ad-b0e183a454dc}</Project>
